force-app/main/default/objects/Project__c/fields/ClickUp_Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>ClickUp_Folder_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>ClickUp Folder Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>