force-app/main/default/objects/Project__c/fields/Final_Rate__c.field-meta.xml
<CustomField>
    <fullName>Final_Rate__c</fullName>
    <description>Is used to determine the final rate what the revenue is calculated against from in reports</description>
    <formula>Rate__c - Rate__c *  Tax_Rate__c - Rate__c * Commission_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is used to determine the final rate what the revenue is calculated against from in reports</inlineHelpText>
    <label>Final Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>