force-app/main/default/objects/Project__c/fields/Name_for_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Name_for_Invoice__c</fullName>
    <label>Name for Invoice</label>
    <type>TextArea</type>
</CustomField>