force-app/main/default/objects/Project__c/fields/Project_Key__c.field-meta.xml
<CustomField>
    <fullName>Project_Key__c</fullName>
    <label>Project Key</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>