force-app/main/default/objects/Project__c/fields/Related_Slack_Channel__c.field-meta.xml
<CustomField>
    <fullName>Related_Slack_Channel__c</fullName>
    <label>Related Slack Channel</label>
    <length>80</length>
    <type>Text</type>
</CustomField>