force-app/main/default/objects/Project__c/fields/sysCaseCounter__c.field-meta.xml
<CustomField>
    <fullName>sysCaseCounter__c</fullName>
    <label>sysCaseCounter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>