force-app/main/default/objects/Project__c/listViews/Alive_Projects.listView-meta.xml
<ListView>
    <fullName>Alive_Projects</fullName>
    <columns>NAME</columns>
    <columns>Project_Key__c</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Time_Spent_This_Month__c</columns>
    <columns>Time_Spent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Done</value>
    </filters>
    <label>Alive Projects</label>
</ListView>