force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Rate__c</columns>
    <columns>Tax_Rate__c</columns>
    <columns>Commission_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>