force-app/main/default/objects/Project__c/listViews/Propeller_Plan.listView-meta.xml
<ListView>
    <fullName>Propeller_Plan</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>contains</operation>
        <value>Propeller</value>
    </filters>
    <label>Propeller Plan</label>
</ListView>