force-app/main/default/objects/Project__c/listViews/Vertic.listView-meta.xml
<ListView>
    <fullName>Vertic</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Rate__c</columns>
    <columns>Commission_Rate__c</columns>
    <columns>Tax_Rate__c</columns>
    <columns>Final_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>contains</operation>
        <value>Vertic</value>
    </filters>
    <label>Vertic</label>
</ListView>